Changes since version 2.1.2
---------------------------

- Added ice_communicator() and ice_toString() to proxies. The return
  value of ice_communicator() is always the value of $ICE.

- Ice.ObjectImpl is now an abstract class that cannot be instantiated.
  This change should be transparent to application code.

Changes since version 2.1.0
---------------------------

- Added -E option to the various Slice compilers to print preprocessor
  output on stdout.

- A crash occurred if the global variable $ICE was used before a
  profile was loaded. This now causes an error message.

- Attempting to print a proxy value resulted in a fatal error.
  This has been fixed so that printing a proxy displays it in
  stringified form.

Changes since version 2.0.0
---------------------------

- Added setDefaultContext() and getDefaultContext() to the
  Ice::Communicator interface. This allows a default context to be
  established on a communicator-wide basis. See section 29.8.3 in
  the doc.

  Added ice_defaultContext to Ice::ObjectProxy. This creates a new
  proxy that uses the default context established on the communicator.

Changes since version 1.1.2
---------------------------

- Compatibility with Ice 2.0.0.

- Added the communicator method getProperty(name[, default]).

- The configuration directives in an INI file are now named
  "ice.config", "ice.slice", and "ice.options", for consistency
  with the global directives. The previous directive names are
  still supported.

- Fixed a bug that prevented Apache 1.x from starting.

- The documentation has always stated that same-named constructs
  cannot be directly nested inside each other. (For example, a
  module `M' cannot contain a constant named `M'.) The Slice parser
  compiler did not enforce this correctly up to now for modules
  containing constructs with the same name as the enclosing module.
  This has been fixed and now results in a diagnostic.
