@@ -1,6 +1,15 @@
 Changes since version 2.1.2
 ---------------------------
 
+- Ice_loadProfile now raises Ice_ProfileNotFoundException if a
+  given profile is not found and Ice_ProfileAlreadyLoadedException
+  if a profile has already been loaded.
+
+- Added proxy methods to retrieve the proxy adapter id and endpoints
+  (ice_getAdapterId() and ice_getEndpoints()) and to create a new
+  proxy with a new adapter id or new endpoints (ice_newAdapterId() and
+  ice_newEndpoints()).
+
 - Added ice_communicator() and ice_toString() to proxies. The return
   value of ice_communicator() is always the value of $ICE.
 
